# superComp

./: .gitignore  README.md
notes/: kongulljobexample
oving4/rapport/: oving4rapp.tex
oving4/src/: CMakeLists.txt  common.c  common.h  oving4-hybrid.c  oving4-openmp.c  oving4-openmpi.c  oving4-serial-blas.c  oving4-serial.c
oving6/: CMakeLists.txt  common.c  common.h  job.sh  oving6-poison-mpi-plot.c  oving6-poison-mpi.c  poisson.c  poisson.f
oving6/Results/: diffrentPpart1.csv  diffrentPpart1.txt  result.csv  seqvensiell.tex  ss_poisson.o254813  ss_poisson.o254858  ss_poisson.o257225
oving6/ex6/: poisson.c
oving6/report/: report6.tex
